# Jarvis-v3

./: README.md  index.html  package-lock.json  package.json  stats.html  tailwind.config.js  vite.config.ts
.github/workflows/: build.yml
src/: App.tsx  StatsApp.tsx  index.css  stats-main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  main.rs
src/assets/: icardi.ts  madison.ts
src/components/: ChartModal.tsx  JarvisAI.tsx  MetricCard.tsx  SpotifyPanel.tsx  TranslatorCard.tsx
src/components/ui/: Card.tsx  Modal.tsx
src/lib/: utils.ts
src/routes/: +page.svelte
src/store/: system.ts
