[package]
name = "jarvis"
version = "3.1.0"
description = "JARVIS System Monitor"
authors = ["Raldexx"]
edition = "2021"

[lib]
name = "jarvis_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "jarvis"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri             = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde             = { version = "1", features = ["derive"] }
serde_json        = "1"
sysinfo           = "0.33"
reqwest           = { version = "0.12", features = ["json"] }
tokio             = { version = "1", features = ["full"] }

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = [
  "winuser", "processthreadsapi", "psapi", "winnt", "minwindef", "windef"
] }
